testing/tests/ui/match-unit-structs.stderr
error[E0422]: cannot find struct, variant or union type `Hello` in this scope
 --> tests/ui/match-unit-structs.rs:9:10
  |
9 | #[derive(Template)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this variant
  |
1 + use crate::Greeting::Hello;
  |

error[E0422]: cannot find struct, variant or union type `Hey` in this scope
 --> tests/ui/match-unit-structs.rs:9:10
  |
9 | #[derive(Template)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this variant
  |
1 + use crate::Greeting::Hey;
  |

error[E0422]: cannot find struct, variant or union type `Hi` in this scope
 --> tests/ui/match-unit-structs.rs:9:10
  |
9 | #[derive(Template)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this variant
  |
1 + use crate::Greeting::Hi;
  |
